# desafio_painel_esus

./: .dockerignore  .flaskenv  DESAFIO.md  Dockerfile  README.md  compose.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
desafio_painel_esus/: __init__.py  app.py  config.py
tests/: __init__.py  test_app.py
